# unified-planning

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  GOVERNANCE.md  MAINTAINERS  MANIFEST.in  README.md  dev-requirements.txt  domain_mytest.pddl  hierarchical.ipynb  justfile  make_distrib.sh  my_test_plan.plan  mytest.ipynb  plot-requirements.txt  problem_mytest.pddl  pyproject.toml  requirements.txt  run_server.py  run_test.sh  run_tests.py  run_tests.sh  setup.py  test.csv  test_anml_parsing.py  test_code_snippets.sh  test_colab.sh  test_imports.py  test_imports.sh  test_quick.py  test_ttp_to_stn.py  up.py
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: deploy.yml  main.yml  push.yml  pypi_deploy.yml  release.yml  tag.yml  test.yml  wiki_deploy.yml
anml_files/: match.anml
code_snippets/: usage_1.py
docs/: .gitignore  api-ref.rst  api_ref.rst  conf.py  contributions.rst  contributor_guide.rst  dev_instructions.rst  engines.rst  examples.rst  generate_api_doc.py  getting_involved.rst  getting_started.rst  index.rst  interoperability.rst  issue_tracking.rst  operation_modes.rst  optimality.rst  plot_package.rst  problem_representation.rst  release_notes.rst  requirements.txt  showcases.rst
docs/api/: Environment.rst  ExecutionEnvironment.rst  index.rst
docs/code_snippets/: action_selector_and_execution_environment.py  compiler.py  (+13 more)
notebooks/: Compilers_example.ipynb  Hierarchical_Planning.ipynb  MultiAgent_Planning.ipynb  Optimal_Planning.ipynb  Oversubscription_with_MetaEngine.ipynb  PDDL_IO_Example.ipynb  Planning_engine_demo.ipynb  README.md  Simulated_effects.ipynb  UP_transformers.ipynb  Unified_Planning_Basics.ipynb  Unified_Planning_Temporal.ipynb  compilers_example.ipynb
scripts/: generate_protobuf_bindings.sh  make_distrib.sh  test_code_snippets.sh  test_colab.sh  test_imports.py
tutorials/: usage.rst
unified_planning/: __init__.py  environment.py  exceptions.py  plan.py  shortcuts.py  utils.py
unified_planning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
up_benchmarks/: __init__.py  report.py  utils.py
up_test_cases/: report.py  utils.py
upf/: __init__.py  action.py  conditional_effects_remover.py  dnf.py  dnf_copy.py  dnf_remover.py  effect.py  environment.py  exceptions.py  expression.py  factory.py  fluent.py  fnode.py  negative_preconditions_remover.py  object.py  operators.py  operators_extractor.py  parallel.py  pddl_solver.py  plan-validator.py  plan.py  plan_validator.py  planner.py  problem.py  problem_kind.py  quantifiers_remover.py  shortcuts.py  simplifier.py  solver.py  state.py  substituter.py  temporal.py  timing.py  type_checker.py  typing.py  variable.py
(+3446 files in other folders)
